--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Toko Cahaya Ilmu - Koleksi Lengkap Buku Sekolah
+            Toko Glamedia - Koleksi Lengkap Buku Sekolah
         </title>
         <link rel="stylesheet" type="text/css" media="screen" href="./style.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -11,7 +11,7 @@
                 <!-- Top navigation -->
             <div class="topnav">
                 <!-- untuk Menu Rata Kiri-->
-                <a href="#news">Cahaya Ilmu</a>
+                <a href="#news">Glamedia</a>
                 <form class="example" action="action_page.php">
                     <input type="text" placeholder="Search.." name="search">
                     <button type="submit"><i class="fa fa-search"></i></button>
